--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "build": "tsc -p .",
+    "build:watch": "tsc -w -p .",
     "test": "mocha dist/**/*.spec.js",
-    "test:dev": "tsc-watch --onSuccess \"npm run test\""
+    "test:dev": "tsc-watch --onSuccess \"npm run test\"",
+    "demo": "node dist/demo/index",
+    "demo:dev": "tsc-watch --onSuccess \"npm run demo\""
   },
   "repository": {
     "type": "git",
@@ -18,6 +22,29 @@
     "url": "https://github.com/aldahick/athena/issues"
   },
   "homepage": "https://github.com/aldahick/athena#readme",
-  "dependencies": {},
-  "devDependencies": {}
+  "dependencies": {
+    "bunyan": "^1.8.12",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "lodash": "^4.17.15",
+    "reflect-metadata": "^0.1.13",
+    "source-map-support": "^0.5.19",
+    "tsyringe": "^4.1.0"
+  },
+  "devDependencies": {
+    "@aldahick/eslint-rules": "^0.5.1",
+    "@types/bunyan": "^1.8.6",
+    "@types/chai": "^4.2.11",
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.6",
+    "@types/lodash": "^4.14.150",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^13.13.2",
+    "@types/source-map-support": "^0.5.1",
+    "chai": "^4.2.0",
+    "mocha": "^7.1.1",
+    "tsc-watch": "^4.2.3",
+    "typescript": "^3.8.3"
+  }
 }
