--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
   },
   "homepage": "https://github.com/aldahick/athena#readme",
   "dependencies": {
+    "apollo-server-express": "^2.12.0",
     "bunyan": "^1.8.12",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fs-extra": "^9.0.0",
+    "graphql": "^15.0.0",
     "lodash": "^4.17.15",
+    "recursive-readdir": "^2.2.2",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.19",
     "tsyringe": "^4.1.0"
@@ -38,9 +42,11 @@
     "@types/chai": "^4.2.11",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "@types/fs-extra": "^8.1.0",
     "@types/lodash": "^4.14.150",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.13.2",
+    "@types/recursive-readdir": "^2.2.0",
     "@types/source-map-support": "^0.5.1",
     "chai": "^4.2.0",
     "mocha": "^7.1.1",
