--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "graphql": "^15.0.0",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.10",
+    "pg": "^8.0.3",
     "recursive-readdir": "^2.2.2",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.19",
-    "tsyringe": "^4.1.0"
+    "tsyringe": "^4.1.0",
+    "typeorm": "^0.2.24"
   },
   "devDependencies": {
     "@aldahick/eslint-rules": "^0.5.1",
