--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "tsc -p .",
     "build:watch": "tsc -w -p .",
+    "lint": "eslint --ext .ts .",
     "test": "mocha dist/**/*.spec.js",
     "test:dev": "tsc-watch --onSuccess \"npm run test\"",
     "demo": "node dist/demo/index",
