Only publish when a tag is pushed

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,8 @@ workflows:
             - build
             - lint
           filters:
+            tags:
+              only: /^v.*/
             branches:
               only: master
 
