--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "mocha dist/**/*.spec.js",
     "test:dev": "tsc-watch --onSuccess \"npm run test\"",
     "demo": "node dist/demo/index",
-    "demo:dev": "tsc-watch --onSuccess \"npm run demo\"",
+    "demo:dev": "tsc-watch --onSuccess \"npm run demo\" | bunyan",
     "demo:generate": "graphql-codegen --config src/demo/graphql/codegen.yml"
   },
   "repository": {
@@ -26,16 +26,19 @@
   "homepage": "https://github.com/aldahick/athena#readme",
   "dependencies": {
     "@typegoose/typegoose": "^7.0.0",
+    "accesscontrol": "^2.2.1",
     "apollo-server-express": "^2.12.0",
     "bunyan": "^1.8.12",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs-extra": "^9.0.0",
-    "graphql": "^15.0.0",
+    "graphql": "^14.6.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.10",
     "pg": "^8.0.3",
+    "randomstring": "^1.1.5",
     "recursive-readdir": "^2.2.2",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.19",
@@ -52,10 +55,12 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/fs-extra": "^8.1.0",
+    "@types/jsonwebtoken": "^8.3.9",
     "@types/lodash": "^4.14.150",
     "@types/mocha": "^7.0.2",
     "@types/mongoose": "^5.7.14",
     "@types/node": "^13.13.2",
+    "@types/randomstring": "^1.1.6",
     "@types/recursive-readdir": "^2.2.0",
     "@types/source-map-support": "^0.5.1",
     "chai": "^4.2.0",
