--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "randomstring": "^1.1.5",
     "recursive-readdir": "^2.2.2",
     "reflect-metadata": "^0.1.13",
+    "socket.io": "^2.3.0",
     "source-map-support": "^0.5.19",
     "tsyringe": "^4.3.0",
     "typeorm": "^0.2.25"
@@ -63,6 +64,7 @@
     "@types/node": "^13.13.9",
     "@types/randomstring": "^1.1.6",
     "@types/recursive-readdir": "^2.2.0",
+    "@types/socket.io": "^2.1.8",
     "@types/source-map-support": "^0.5.1",
     "chai": "^4.2.0",
     "mocha": "^7.2.0",
