--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   },
   "homepage": "https://github.com/aldahick/athena#readme",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@typegoose/typegoose": "^7.1.3",
+    "@types/hapi__joi": "^17.1.0",
     "accesscontrol": "^2.2.1",
     "apollo-server-express": "^2.13.1",
     "bunyan": "^1.8.12",
