--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "lint": "eslint --ext .ts .",
     "test": "mocha dist/**/*.spec.js",
     "test:dev": "tsc-watch --onSuccess \"npm run test\"",
-    "demo": "node dist/demo/index",
-    "demo:dev": "tsc-watch --onSuccess \"npm run demo\" | bunyan",
+    "demo": "node dist/demo/index.js",
+    "demo:dev": "tsc-watch --onSuccess \"node dist/demo/index.js\" | bunyan",
     "demo:generate": "graphql-codegen --config src/demo/graphql/codegen.yml",
     "prepublishOnly": "npm run build"
   },
@@ -27,22 +27,22 @@
   "homepage": "https://github.com/aldahick/athena#readme",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
-    "@typegoose/typegoose": "^7.1.3",
-    "@types/express": "^4.17.6",
-    "@types/hapi__joi": "^17.1.0",
+    "@typegoose/typegoose": "^7.3.0",
+    "@types/express": "^4.17.7",
+    "@types/hapi__joi": "^17.1.4",
     "@types/socket.io": "^2.1.8",
     "accesscontrol": "^2.2.1",
-    "apollo-server-express": "^2.13.1",
-    "bunyan": "^1.8.12",
+    "apollo-server-express": "^2.15.1",
+    "bunyan": "^1.8.14",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "fs-extra": "^9.0.0",
-    "graphql": "^14.6.0",
+    "fs-extra": "^9.0.1",
+    "graphql": "^15.3.0",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.15",
-    "mongoose": "^5.9.15",
-    "pg": "^8.2.1",
+    "lodash": "^4.17.19",
+    "mongoose": "^5.9.23",
+    "pg": "^8.3.0",
     "randomstring": "^1.1.5",
     "recursive-readdir": "^2.2.2",
     "reflect-metadata": "^0.1.13",
@@ -52,25 +52,25 @@
     "typeorm": "^0.2.25"
   },
   "devDependencies": {
-    "@aldahick/eslint-rules": "^0.7.1",
-    "@graphql-codegen/cli": "^1.14.0",
-    "@graphql-codegen/typescript": "^1.14.0",
-    "@graphql-codegen/typescript-operations": "^1.14.0",
+    "@aldahick/eslint-rules": "^0.7.2",
+    "@graphql-codegen/cli": "^1.17.0",
+    "@graphql-codegen/typescript": "^1.17.0",
+    "@graphql-codegen/typescript-operations": "^1.17.0",
     "@types/bunyan": "^1.8.6",
     "@types/chai": "^4.2.11",
     "@types/cors": "^2.8.6",
-    "@types/fs-extra": "^8.1.1",
+    "@types/fs-extra": "^9.0.1",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/lodash": "^4.14.152",
-    "@types/mocha": "^7.0.2",
-    "@types/mongoose": "^5.7.21",
-    "@types/node": "^13.13.9",
+    "@types/lodash": "^4.14.157",
+    "@types/mocha": "^8.0.0",
+    "@types/mongoose": "^5.7.31",
+    "@types/node": "^14.0.22",
     "@types/randomstring": "^1.1.6",
     "@types/recursive-readdir": "^2.2.0",
-    "@types/source-map-support": "^0.5.1",
+    "@types/source-map-support": "^0.5.2",
     "chai": "^4.2.0",
-    "mocha": "^7.2.0",
-    "tsc-watch": "^4.2.8",
-    "typescript": "^3.9.3"
+    "mocha": "^8.0.1",
+    "tsc-watch": "^4.2.9",
+    "typescript": "^3.9.6"
   }
 }
