--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "express": "^4.17.1",
     "fs-extra": "^9.0.1",
     "graphql": "^15.3.0",
+    "ioredis": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.19",
     "mongoose": "^5.9.23",
@@ -60,6 +61,7 @@
     "@types/chai": "^4.2.11",
     "@types/cors": "^2.8.6",
     "@types/fs-extra": "^9.0.1",
+    "@types/ioredis": "^4.17.3",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.157",
     "@types/mocha": "^8.0.0",
