--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,10 @@
 version: 2.1
 
+executors:
+  node:
+    docker:
+      - image: cimg/node:12.18
+
 workflows:
   build_and_deploy:
     jobs:
@@ -13,8 +18,7 @@ workflows:
 
 jobs:
   install_dependencies:
-    docker:
-      - image: cimg/node:12.18
+    executor: node
     steps:
       - checkout
       - restore_cache:
@@ -29,8 +33,7 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "yarn.lock" }}
   lint:
-    docker:
-      - image: cimg/node:12.18
+    executor: node
     steps:
       - checkout
       - restore_cache:
@@ -40,8 +43,7 @@ jobs:
           name: Lint
           command: yarn lint
   build:
-    docker:
-      - image: cimg/node:12.18
+    executor: node
     steps:
       - checkout
       - restore_cache:
