--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc -p .",
-    "build:watch": "tsc -w -p .",
-    "lint": "eslint --ext .ts .",
+    "build": "tsc",
+    "build:watch": "tsc -w",
+    "lint": "eslint --ext .ts src",
     "test": "mocha dist/**/*.spec.js",
     "test:dev": "tsc-watch --onSuccess \"yarn test\"",
     "demo": "node dist/demo/index.js",
@@ -26,53 +26,53 @@
   },
   "homepage": "https://github.com/aldahick/athena#readme",
   "dependencies": {
-    "@hapi/joi": "^17.1.1",
-    "@typegoose/typegoose": "^7.3.0",
-    "@types/express": "^4.17.7",
-    "@types/hapi__joi": "^17.1.4",
-    "@types/mongoose": "^5.7.36",
-    "@types/socket.io": "^2.1.8",
+    "@typegoose/typegoose": "^7.4.5",
+    "@types/express": "^4.17.9",
+    "@types/joi": "^14.3.4",
+    "@types/mongoose": "^5.10.3",
+    "@types/socket.io": "^2.1.12",
     "accesscontrol": "^2.2.1",
-    "apollo-server-express": "^2.15.1",
+    "apollo-server-express": "^2.19.0",
     "bunyan": "^1.8.14",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs-extra": "^9.0.1",
-    "graphql": "^15.3.0",
-    "ioredis": "^4.17.3",
+    "graphql": "^15.4.0",
+    "ioredis": "^4.19.4",
+    "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.19",
-    "mongoose": "^5.9.23",
-    "pg": "^8.3.0",
+    "lodash": "^4.17.20",
+    "mongoose": "5.10.18",
+    "pg": "^8.5.1",
     "randomstring": "^1.1.5",
     "recursive-readdir": "^2.2.2",
     "reflect-metadata": "^0.1.13",
-    "socket.io": "^2.3.0",
+    "socket.io": "^3.0.4",
     "source-map-support": "^0.5.19",
-    "tsyringe": "^4.3.0",
-    "typeorm": "^0.2.25"
+    "tsyringe": "^4.4.0",
+    "typeorm": "^0.2.29"
   },
   "devDependencies": {
-    "@aldahick/eslint-rules": "^0.8.0",
-    "@graphql-codegen/cli": "^1.17.0",
-    "@graphql-codegen/typescript": "^1.17.0",
-    "@graphql-codegen/typescript-operations": "^1.17.0",
+    "@aldahick/eslint-rules": "^0.10.0",
+    "@graphql-codegen/cli": "^1.19.4",
+    "@graphql-codegen/typescript": "^1.19.0",
+    "@graphql-codegen/typescript-operations": "^1.17.12",
     "@types/bunyan": "^1.8.6",
-    "@types/chai": "^4.2.11",
-    "@types/cors": "^2.8.6",
-    "@types/fs-extra": "^9.0.1",
-    "@types/ioredis": "^4.17.3",
+    "@types/chai": "^4.2.14",
+    "@types/cors": "^2.8.9",
+    "@types/fs-extra": "^9.0.5",
+    "@types/ioredis": "^4.17.9",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/lodash": "^4.14.157",
-    "@types/mocha": "^8.0.0",
-    "@types/node": "^14.0.22",
+    "@types/lodash": "^4.14.165",
+    "@types/mocha": "^8.2.0",
+    "@types/node": "^14.14.14",
     "@types/randomstring": "^1.1.6",
     "@types/recursive-readdir": "^2.2.0",
-    "@types/source-map-support": "^0.5.2",
+    "@types/source-map-support": "^0.5.3",
     "chai": "^4.2.0",
-    "mocha": "^8.0.1",
+    "mocha": "^8.2.1",
     "tsc-watch": "^4.2.9",
-    "typescript": "^3.9.6"
+    "typescript": "^4.1.3"
   }
 }
