--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "homepage": "https://github.com/aldahick/athena#readme",
   "dependencies": {
-    "@typegoose/typegoose": "^7.4.5",
+    "@typegoose/typegoose": "^7.6.0",
     "@types/express": "^4.17.9",
     "@types/joi": "^14.3.4",
     "@types/mongoose": "^5.10.3",
@@ -43,7 +43,7 @@
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
-    "mongoose": "5.10.18",
+    "mongoose": "^5.12.8",
     "pg": "^8.5.1",
     "randomstring": "^1.1.5",
     "recursive-readdir": "^2.2.2",
