--- a/package.json
+++ b/package.json
@@ -25,14 +25,16 @@
     "url": "https://github.com/aldahick/athena/issues"
   },
   "homepage": "https://github.com/aldahick/athena#readme",
+  "peerDependencies": {
+    "@typegoose/typegoose": "9.11.0"
+  },
   "dependencies": {
-    "@typegoose/typegoose": "^7.6.0",
+    "@typegoose/typegoose": "9.11.0",
     "@types/express": "^4.17.9",
     "@types/joi": "^14.3.4",
     "@types/mongoose": "^5.10.3",
-    "@types/socket.io": "^2.1.12",
     "accesscontrol": "^2.2.1",
-    "apollo-server-express": "^2.19.0",
+    "apollo-server-express": "^3.10.0",
     "bunyan": "^1.8.14",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -43,21 +45,21 @@
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
-    "mongoose": "^5.12.8",
+    "mongoose": "6.5.1",
     "pg": "^8.5.1",
     "randomstring": "^1.1.5",
     "recursive-readdir": "^2.2.2",
     "reflect-metadata": "^0.1.13",
-    "socket.io": "^3.0.4",
+    "socket.io": "^4.5.1",
     "source-map-support": "^0.5.19",
     "tsyringe": "^4.4.0",
     "typeorm": "^0.2.29"
   },
   "devDependencies": {
     "@aldahick/eslint-rules": "^0.10.0",
-    "@graphql-codegen/cli": "^1.19.4",
-    "@graphql-codegen/typescript": "^1.19.0",
-    "@graphql-codegen/typescript-operations": "^1.17.12",
+    "@graphql-codegen/cli": "^2.11.3",
+    "@graphql-codegen/typescript": "^2.7.2",
+    "@graphql-codegen/typescript-operations": "^2.5.2",
     "@types/bunyan": "^1.8.6",
     "@types/chai": "^4.2.14",
     "@types/cors": "^2.8.9",
@@ -71,7 +73,7 @@
     "@types/recursive-readdir": "^2.2.0",
     "@types/source-map-support": "^0.5.3",
     "chai": "^4.2.0",
-    "mocha": "^8.2.1",
+    "mocha": "^10.0.0",
     "tsc-watch": "^4.2.9",
     "typescript": "^4.1.3"
   }
