--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc",
     "build:watch": "tsc -w",
     "lint": "eslint --ext .ts src",
+    "format": "prettier --config .prettierrc --write src",
     "test": "mocha dist/**/*.spec.js",
     "test:dev": "tsc-watch --onSuccess \"yarn test\"",
     "demo": "node dist/demo/index.js",
@@ -56,7 +57,6 @@
     "typeorm": "^0.2.29"
   },
   "devDependencies": {
-    "@aldahick/eslint-rules": "^0.10.0",
     "@graphql-codegen/cli": "^2.11.3",
     "@graphql-codegen/typescript": "^2.7.2",
     "@graphql-codegen/typescript-operations": "^2.5.2",
@@ -72,9 +72,15 @@
     "@types/randomstring": "^1.1.6",
     "@types/recursive-readdir": "^2.2.0",
     "@types/source-map-support": "^0.5.3",
+    "@typescript-eslint/eslint-plugin": "5.32.0",
+    "@typescript-eslint/parser": "5.32.0",
     "chai": "^4.2.0",
+    "eslint": "8.21.0",
+    "eslint-plugin-prefer-arrow": "1.2.3",
+    "eslint-plugin-simple-import-sort": "7.0.0",
     "mocha": "^10.0.0",
+    "prettier": "2.7.1",
     "tsc-watch": "^4.2.9",
-    "typescript": "^4.1.3"
+    "typescript": "4.7.4"
   }
 }
