--- a/package.json
+++ b/package.json
@@ -26,61 +26,56 @@
     "url": "https://github.com/aldahick/athena/issues"
   },
   "homepage": "https://github.com/aldahick/athena#readme",
-  "peerDependencies": {
-    "@typegoose/typegoose": "9.11.0"
-  },
   "dependencies": {
-    "@typegoose/typegoose": "9.11.0",
-    "@types/express": "^4.17.9",
-    "@types/joi": "^14.3.4",
-    "@types/mongoose": "^5.10.3",
-    "accesscontrol": "^2.2.1",
-    "apollo-server-express": "^3.10.0",
-    "bunyan": "^1.8.14",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "fs-extra": "^9.0.1",
-    "graphql": "^15.4.0",
-    "ioredis": "^4.19.4",
-    "joi": "^17.3.0",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.20",
-    "mongoose": "6.5.1",
-    "pg": "^8.5.1",
-    "randomstring": "^1.1.5",
-    "recursive-readdir": "^2.2.2",
-    "reflect-metadata": "^0.1.13",
-    "socket.io": "^4.5.1",
-    "source-map-support": "^0.5.19",
-    "tsyringe": "^4.4.0",
-    "typeorm": "^0.2.29"
+    "@typegoose/typegoose": "9.12.0",
+    "accesscontrol": "2.2.1",
+    "apollo-server-express": "3.10.2",
+    "bunyan": "1.8.15",
+    "cors": "2.8.5",
+    "dotenv": "16.0.2",
+    "express": "4.18.1",
+    "fs-extra": "10.1.0",
+    "graphql": "16.6.0",
+    "ioredis": "5.2.3",
+    "joi": "17.6.1",
+    "jsonwebtoken": "8.5.1",
+    "lodash": "4.17.21",
+    "mongoose": "6.6.1",
+    "pg": "8.8.0",
+    "randomstring": "1.2.2",
+    "recursive-readdir": "2.2.2",
+    "reflect-metadata": "0.1.13",
+    "socket.io": "4.5.2",
+    "source-map-support": "0.5.21",
+    "tsyringe": "4.7.0",
+    "typeorm": "0.3.10"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^2.11.3",
-    "@graphql-codegen/typescript": "^2.7.2",
-    "@graphql-codegen/typescript-operations": "^2.5.2",
-    "@types/bunyan": "^1.8.6",
-    "@types/chai": "^4.2.14",
-    "@types/cors": "^2.8.9",
-    "@types/fs-extra": "^9.0.5",
-    "@types/ioredis": "^4.17.9",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/lodash": "^4.14.165",
-    "@types/mocha": "^8.2.0",
-    "@types/node": "^14.14.14",
-    "@types/randomstring": "^1.1.6",
-    "@types/recursive-readdir": "^2.2.0",
-    "@types/source-map-support": "^0.5.3",
-    "@typescript-eslint/eslint-plugin": "5.32.0",
-    "@typescript-eslint/parser": "5.32.0",
-    "chai": "^4.2.0",
-    "eslint": "8.21.0",
+    "@graphql-codegen/cli": "2.12.1",
+    "@graphql-codegen/typescript": "2.7.3",
+    "@graphql-codegen/typescript-operations": "2.5.3",
+    "@types/bunyan": "1.8.8",
+    "@types/chai": "4.3.3",
+    "@types/cors": "2.8.12",
+    "@types/express": "4.17.14",
+    "@types/fs-extra": "9.0.13",
+    "@types/ioredis": "4.28.10",
+    "@types/jsonwebtoken": "8.5.9",
+    "@types/lodash": "4.14.185",
+    "@types/mocha": "9.1.1",
+    "@types/node": "18.7.20",
+    "@types/randomstring": "1.1.8",
+    "@types/recursive-readdir": "2.2.1",
+    "@types/source-map-support": "0.5.6",
+    "@typescript-eslint/eslint-plugin": "5.38.0",
+    "@typescript-eslint/parser": "5.38.0",
+    "chai": "4.3.6",
+    "eslint": "8.24.0",
     "eslint-plugin-prefer-arrow": "1.2.3",
-    "eslint-plugin-simple-import-sort": "7.0.0",
-    "mocha": "^10.0.0",
+    "eslint-plugin-simple-import-sort": "8.0.0",
+    "mocha": "10.0.0",
     "prettier": "2.7.1",
-    "tsc-watch": "^4.2.9",
-    "typescript": "4.7.4"
+    "tsc-watch": "5.0.3",
+    "typescript": "4.8.3"
   }
 }
