--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:watch": "tsc -w",
     "lint": "eslint --ext .ts src",
     "format": "prettier --config .prettierrc --write src",
-    "test": "mocha dist/**/*.spec.js",
+    "test": "jest",
     "test:dev": "tsc-watch --onSuccess \"yarn test\"",
     "demo": "node dist/demo/index.js",
     "demo:dev": "tsc-watch --onSuccess \"node dist/demo/index.js\" | bunyan",
@@ -55,25 +55,23 @@
     "@graphql-codegen/typescript": "2.7.3",
     "@graphql-codegen/typescript-operations": "2.5.3",
     "@types/bunyan": "1.8.8",
-    "@types/chai": "4.3.3",
     "@types/cors": "2.8.12",
     "@types/express": "4.17.14",
     "@types/fs-extra": "9.0.13",
     "@types/ioredis": "4.28.10",
+    "@types/jest": "29.0.3",
     "@types/jsonwebtoken": "8.5.9",
     "@types/lodash": "4.14.185",
-    "@types/mocha": "9.1.1",
     "@types/node": "18.7.20",
     "@types/randomstring": "1.1.8",
     "@types/recursive-readdir": "2.2.1",
     "@types/source-map-support": "0.5.6",
     "@typescript-eslint/eslint-plugin": "5.38.0",
     "@typescript-eslint/parser": "5.38.0",
-    "chai": "4.3.6",
     "eslint": "8.24.0",
     "eslint-plugin-prefer-arrow": "1.2.3",
     "eslint-plugin-simple-import-sort": "8.0.0",
-    "mocha": "10.0.0",
+    "jest": "29.0.3",
     "prettier": "2.7.1",
     "tsc-watch": "5.0.3",
     "typescript": "4.8.3"
