--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -3,9 +3,14 @@
   "version": "0.0.1",
   "license": "MIT",
   "type": "module",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "lint": "eslint src"
+    "build": "tsc",
+    "lint": "eslint src",
+    "test": "node --test dist"
   },
-  "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/node": "20.1.2"
+  }
 }
