--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,15 +6,16 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "build": "tsc",
     "lint": "eslint src"
   },
   "dependencies": {
+    "@aldahick/tsyringe": "4.7.1",
     "@apollo/server": "4.7.1",
     "@as-integrations/fastify": "1.3.2",
     "@athenajs/utils": "workspace:^",
     "fastify": "4.17.0",
     "graphql": "16.6.0",
-    "inversify": "6.0.1",
     "reflect-metadata": "0.1.13",
     "winston": "3.8.2"
   },
