--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,7 +7,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "postversion": "bash ../../scripts/hooks/postversion.sh core"
   },
   "dependencies": {
     "@aldahick/tsyringe": "4.7.1",
