Export graphql Kind from core

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -9,6 +9,7 @@
     "build": "tsc",
     "lint": "eslint src",
     "test": "node --test dist",
+    "preversion": "pnpm build",
     "postversion": "bash ../../scripts/hooks/postversion.sh utils"
   },
   "devDependencies": {
