--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "tsc",
     "lint": "eslint src",
+    "preversion": "pnpm build",
     "postversion": "bash ../../scripts/hooks/postversion.sh core"
   },
   "dependencies": {
