--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -1,3 +1,4 @@
+name: Publish package with PNPM
 on:
   workflow_call:
     inputs:
@@ -19,7 +20,7 @@ jobs:
       - uses: pnpm/action-setup@v2
         with:
           version: 8
-      - run: pnpm install
+      - run: pnpm ci
       - run: pnpm build
         working-directory: ${{ inputs.directory }}
       - run: pnpm publish --no-git-checks
