--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: pnpm/action-setup@v2
         with:
           version: 8
-      - run: pnpm ci
+      - run: pnpm install
       - run: pnpm build
         working-directory: ${{ inputs.directory }}
       - run: pnpm publish --no-git-checks
