--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -4,6 +4,7 @@
   "main": "dist/main.js",
   "type": "module",
   "scripts": {
+    "start": "node --enable-source-maps dist/main.js",
     "dev": "tsc-watch --onSuccess 'node --enable-source-maps dist/main.js'"
   },
   "dependencies": {
