--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "node --enable-source-maps dist/main.js",
+    "build": "tsc",
     "dev": "tsc-watch --onSuccess 'node --enable-source-maps dist/main.js'"
   },
   "dependencies": {
