--- a/.github/workflows/build-demo.yml
+++ b/.github/workflows/build-demo.yml
@@ -1,10 +1,11 @@
-name: Build @athenajs/demo
+name: build-demo
 on:
   push:
     paths:
       - packages/demo/**
 jobs:
-  publish:
+  build-demo-package:
     uses: ./.github/workflows/build-package.yml
     with:
+      build-script: build:full
       directory: packages/demo
