--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,6 +17,7 @@
     "@apollo/server": "4.7.1",
     "@as-integrations/fastify": "1.3.2",
     "@athenajs/utils": "workspace:^",
+    "@fastify/cors": "8.3.0",
     "dotenv": "16.0.3",
     "fastify": "4.17.0",
     "graphql": "16.6.0",
