--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -1,4 +1,6 @@
 name: publish-package
+permissions:
+  id-token: write
 on:
   workflow_call:
     inputs:
@@ -27,7 +29,7 @@ jobs:
       - run: pnpm install
       - run: pnpm ${{ inputs.build-script }}
         working-directory: ${{ inputs.directory }}
-      - run: pnpm publish --no-git-checks
+      - run: pnpm publish --provenance --no-git-checks
         working-directory: ${{ inputs.directory }}
         env:
           NODE_AUTH_TOKEN: ${{ secrets.npmToken }}
