--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,7 +10,8 @@
     "build": "tsc",
     "lint": "eslint src",
     "postversion": "bash ../../scripts/hooks/postversion.sh core",
-    "preversion": "pnpm build"
+    "preversion": "pnpm build",
+    "test": "c8 --100 --all node --test dist"
   },
   "dependencies": {
     "@aldahick/tsyringe": "4.7.1",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/graphql-resolve-batch": "1.1.6",
-    "@types/node": "20.1.2"
+    "@types/node": "20.1.2",
+    "c8": "7.14.0"
   }
 }
