--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -10,7 +10,13 @@
     "lint": "eslint src",
     "postversion": "bash ../../scripts/hooks/postversion.sh utils",
     "preversion": "pnpm build",
-    "test": "c8 --100 node --test dist"
+    "test": "c8 node --test dist"
+  },
+  "c8": {
+    "100": true,
+    "all": true,
+    "exclude-after-remap": true,
+    "exclude": ["src/index.ts", "src/*.test.ts", "dist/*"]
   },
   "dependencies": {
     "graphql": "16.6.0"
