--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint src",
     "postversion": "bash ../../scripts/hooks/postversion.sh utils",
     "preversion": "pnpm build",
-    "test": "c8 node --test dist"
+    "test": "c8 node --enable-source-maps --test dist"
   },
   "c8": {
     "100": true,
