--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -12,6 +12,9 @@
     "start": "node --enable-source-maps dist/main.js",
     "test": "c8 node --enable-source-maps --test dist"
   },
+  "repository": {
+    "url": "git+https://github.com/aldahick/athena"
+  },
   "c8": {
     "note": "100% code coverage is usually unnecessary. This is a demo project.",
     "100": true,
