--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,21 +30,21 @@
     ]
   },
   "dependencies": {
-    "@aldahick/tsyringe": "4.7.1",
-    "@apollo/server": "4.7.1",
-    "@as-integrations/fastify": "1.3.2",
+    "@aldahick/tsyringe": "^4.7.1",
+    "@apollo/server": "^4.7.4",
+    "@as-integrations/fastify": "^1.3.2",
     "@athenajs/utils": "workspace:^",
-    "@fastify/cors": "8.3.0",
-    "dotenv": "16.0.3",
-    "fastify": "4.17.0",
-    "graphql": "16.6.0",
-    "graphql-resolve-batch": "1.0.3",
-    "reflect-metadata": "0.1.13",
-    "winston": "3.8.2"
+    "@fastify/cors": "^8.3.0",
+    "dotenv": "^16.3.1",
+    "fastify": "^4.18.0",
+    "graphql": "^16.7.1",
+    "graphql-resolve-batch": "^1.0.3",
+    "reflect-metadata": "^0.1.13",
+    "winston": "^3.9.0"
   },
   "devDependencies": {
-    "@types/graphql-resolve-batch": "1.1.6",
-    "@types/node": "20.1.2",
-    "c8": "7.14.0"
+    "@types/graphql-resolve-batch": "^1.1.6",
+    "@types/node": "^20.3.1",
+    "c8": "^7.14.0"
   }
 }
