--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -26,10 +26,10 @@
     ]
   },
   "dependencies": {
-    "graphql": "16.6.0"
+    "graphql": "^16.7.1"
   },
   "devDependencies": {
-    "@types/node": "20.1.2",
-    "c8": "7.14.0"
+    "@types/node": "^20.3.1",
+    "c8": "^7.14.0"
   }
 }
