--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
   "contributors": [],
   "scripts": {},
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "5.59.5",
-    "@typescript-eslint/parser": "5.59.5",
-    "eslint": "8.40.0",
+    "@typescript-eslint/eslint-plugin": "6.0.0",
+    "@typescript-eslint/parser": "6.0.0",
+    "eslint": "8.45.0",
     "eslint-config-prettier": "8.8.0",
-    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-prettier": "5.0.0",
     "eslint-plugin-simple-import-sort": "10.0.0",
-    "jest": "29.5.0",
-    "prettier": "2.8.8",
-    "ts-jest": "29.1.0",
-    "typescript": "5.0.4"
+    "jest": "29.6.1",
+    "prettier": "3.0.0",
+    "ts-jest": "29.1.1",
+    "typescript": "5.1.6"
+  },
+  "pnpm": {
+    "auditConfig": {
+      "ignoreCves": [
+        "CVE-2022-25883"
+      ]
+    }
   }
 }
