Improve error handling in GraphQL resolvers

--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -10,7 +10,7 @@
     "generate": "graphql-codegen --config codegen.graphql.yml",
     "lint": "eslint src",
     "start": "node --enable-source-maps dist/main.js",
-    "test": "c8 node --enable-source-maps --test dist"
+    "test": "c8 node --enable-source-maps --trace-warnings --test dist"
   },
   "repository": {
     "url": "git+https://github.com/aldahick/athena"
