--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint src",
     "postversion": "bash ../../scripts/hooks/postversion.sh core",
     "preversion": "pnpm build",
-    "test": "c8 node --enable-source-maps --test dist"
+    "test": "c8 node --enable-source-maps --trace-warnings --test dist"
   },
   "repository": {
     "url": "git+https://github.com/aldahick/athena"
