--- a/.github/workflows/publish-react-utils.yml
+++ b/.github/workflows/publish-react-utils.yml
@@ -7,6 +7,7 @@ jobs:
   publish-react-utils-package:
     uses: ./.github/workflows/publish-package.yml
     with:
+      build-script: build:full
       directory: packages/react-utils
       package: "@athenajs/react-utils"
     secrets:
