Use import.meta.env in react-utils/getConfigFromAttributes

--- a/packages/react-utils/package.json
+++ b/packages/react-utils/package.json
@@ -16,7 +16,7 @@
     "url": "git+https://github.com/aldahick/athena"
   },
   "devDependencies": {
-    "@types/node": "^20.5.8",
-    "@athenajs/utils": "workspace:^"
+    "@athenajs/utils": "workspace:^",
+    "@types/node": "^20.5.8"
   }
 }
