Copy .env.example in react-utils Dockerfile and fix serve args

--- a/packages/react-utils/Dockerfile
+++ b/packages/react-utils/Dockerfile
@@ -18,11 +18,12 @@ WORKDIR /app
 RUN npm i -g serve
 RUN npm i @athenajs/react-utils
 
+COPY --from=builder .env.example ./
 COPY --from=builder dist dist
 
 ENV PORT=3000
 RUN printf '#!/bin/sh\nset -e\n\
 node node_modules/@athenajs/react-utils/dist/config-node.js\n\
-serve -s dist -l 0.0.0.0:$PORT' >> serve.sh
+serve -s dist -l "tcp://0.0.0.0:$PORT"\n' >> serve.sh
 
 CMD ["sh", "serve.sh"]
