Update all packages and add engines field

--- a/packages/react-utils/package.json
+++ b/packages/react-utils/package.json
@@ -8,15 +8,19 @@
   "scripts": {
     "build:full": "cd ../utils && pnpm build && cd ../react-utils && pnpm build",
     "build": "tsc",
+    "lint": "eslint src",
     "test": "node --enable-source-maps --trace-warnings --test dist",
     "postversion": "bash ../../scripts/hooks/postversion.sh react-utils",
     "preversion": "pnpm build"
+  },
+  "engines": {
+    "node": ">=16.13.2"
   },
   "repository": {
     "url": "git+https://github.com/aldahick/athena"
   },
   "devDependencies": {
     "@athenajs/utils": "workspace:^",
-    "@types/node": "^20.5.8"
+    "@types/node": "^20.8.3"
   }
 }
