--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,13 @@
     "prettier/prettier": "warn",
     "simple-import-sort/imports": "warn",
     "simple-import-sort/exports": "warn",
-    "@typescript-eslint/await-thenable": "warn"
-  }
+    "@typescript-eslint/await-thenable": "warn",
+    "@typescript-eslint/no-floating-promises": "error"
+  },
+  "overrides": [{
+    "files": ["*.test.ts"],
+    "rules": {
+      "@typescript-eslint/no-floating-promises": "off"
+    }
+  }]
 }
