--- a/package.json
+++ b/package.json
@@ -9,21 +9,17 @@
   },
   "contributors": [],
   "scripts": {},
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "6.0.0",
-    "@typescript-eslint/parser": "6.0.0",
-    "eslint": "8.45.0",
-    "eslint-config-prettier": "8.8.0",
-    "eslint-plugin-prettier": "5.0.0",
-    "eslint-plugin-simple-import-sort": "10.0.0",
-    "jest": "29.6.1",
-    "prettier": "3.0.0",
-    "ts-jest": "29.1.1",
-    "typescript": "5.1.6"
+  "engines": {
+    "node": ">=16.13.2"
   },
-  "pnpm": {
-    "overrides": {
-      "semver@>=6.0.0 <6.3.1": ">=6.3.1"
-    }
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "eslint": "^8.51.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "prettier": "^3.0.3",
+    "typescript": "^5.2.2"
   }
 }
