--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,6 +13,9 @@
     "preversion": "pnpm build",
     "test": "c8 node --enable-source-maps --trace-warnings --test dist"
   },
+  "engines": {
+    "node": ">=16.13.2"
+  },
   "repository": {
     "url": "git+https://github.com/aldahick/athena"
   },
@@ -30,22 +33,22 @@
     ]
   },
   "dependencies": {
-    "@apollo/server": "^4.9.3",
-    "@as-integrations/fastify": "^2.1.0",
+    "@apollo/server": "^4.9.4",
+    "@as-integrations/fastify": "^2.1.1",
     "@athenajs/utils": "workspace:^",
-    "@fastify/cors": "^8.3.0",
-    "@fastify/multipart": "^7.7.3",
+    "@fastify/cors": "^8.4.0",
+    "@fastify/multipart": "^8.0.0",
     "dotenv": "^16.3.1",
-    "fastify": "^4.22.2",
-    "graphql": "^16.8.0",
+    "fastify": "^4.23.2",
+    "graphql": "^16.8.1",
     "graphql-resolve-batch": "^1.0.3",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.8.0",
     "winston": "^3.10.0"
   },
   "devDependencies": {
-    "@types/graphql-resolve-batch": "^1.1.6",
-    "@types/node": "^20.5.8",
+    "@types/graphql-resolve-batch": "^1.1.7",
+    "@types/node": "^20.8.3",
     "c8": "^8.0.1"
   }
 }
