--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -12,6 +12,9 @@
     "start": "node --enable-source-maps dist/main.js",
     "test": "c8 node --enable-source-maps --trace-warnings --test dist"
   },
+  "engines": {
+    "node": ">=16.13.2"
+  },
   "repository": {
     "url": "git+https://github.com/aldahick/athena"
   },
@@ -37,7 +40,7 @@
     "@graphql-codegen/cli": "^5.0.0",
     "@graphql-codegen/typescript": "^4.0.1",
     "@graphql-codegen/typescript-operations": "^4.0.1",
-    "@types/node": "^20.5.8",
+    "@types/node": "^20.8.3",
     "c8": "^8.0.1",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.2.2"
