demo: pnpm audit fix

--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2"
+  },
+  "pnpm": {
+    "overrides": {
+      "@babel/traverse@<7.23.2": ">=7.23.2"
+    }
   }
 }
