--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -13,7 +13,7 @@
     "test": "c8 node --enable-source-maps --test dist"
   },
   "engines": {
-    "node": ">=16.13.2"
+    "node": "^20.10"
   },
   "repository": {
     "url": "git+https://github.com/aldahick/athena"
@@ -30,9 +30,5 @@
   },
   "dependencies": {
     "graphql": "^16.8.1"
-  },
-  "devDependencies": {
-    "@types/node": "^20.8.3",
-    "c8": "^8.0.1"
   }
 }
