--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
   "contributors": [],
   "scripts": {},
   "engines": {
-    "node": ">=16.13.2"
+    "node": "^20.10"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
-    "eslint": "^8.51.0",
+    "@types/node": "^20.10.2",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
+    "c8": "^8.0.1",
+    "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "prettier": "^3.0.3",
-    "typescript": "^5.2.2"
+    "prettier": "^3.1.0",
+    "tsc-watch": "^6.0.4",
+    "typescript": "^5.3.2"
   },
   "pnpm": {
     "overrides": {
