--- a/packages/react-utils/package.json
+++ b/packages/react-utils/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build:full": "cd ../utils && pnpm build && cd ../react-utils && pnpm build",
     "build": "tsc",
-    "lint": "eslint src",
+    "lint": "biome check src",
     "test": "node --enable-source-maps --trace-warnings --test dist",
     "postversion": "bash ../../scripts/hooks/postversion.sh react-utils",
     "preversion": "pnpm build"
