--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -13,10 +13,10 @@ jobs:
   build-package:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
+          node-version-file: .nvmrc
       - uses: pnpm/action-setup@v2
         with:
           version: 8
