--- a/package.json
+++ b/package.json
@@ -7,27 +7,18 @@
     "name": "Alex Hicks",
     "email": "alex@alexhicks.net"
   },
-  "contributors": [],
+  "repository": {
+    "url": "git+https://github.com/aldahick/athena.git"
+  },
   "scripts": {},
   "engines": {
     "node": "^20.10"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.4.1",
     "@types/node": "^20.10.2",
-    "@typescript-eslint/eslint-plugin": "^6.13.1",
-    "@typescript-eslint/parser": "^6.13.1",
     "c8": "^8.0.1",
-    "eslint": "^8.55.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "prettier": "^3.1.0",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.3.2"
-  },
-  "pnpm": {
-    "overrides": {
-      "@babel/traverse@<7.23.2": ">=7.23.2"
-    }
   }
 }
