--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build:full": "cd ../utils && pnpm build && cd ../core && pnpm build",
     "build": "tsc",
-    "lint": "eslint src",
+    "lint": "biome check src",
     "postversion": "bash ../../scripts/hooks/postversion.sh core",
     "preversion": "pnpm build",
     "test": "c8 node --enable-source-maps --trace-warnings --test dist"
