--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "dev": "tsc-watch --onSuccess 'node --enable-source-maps dist/main.js'",
     "generate": "graphql-codegen --config codegen.graphql.yml",
-    "lint": "eslint src",
+    "lint": "biome check src",
     "start": "node --enable-source-maps dist/main.js",
     "test": "c8 node --enable-source-maps --trace-warnings --test dist"
   },
