--- a/.github/workflows/publish-utils.yml
+++ b/.github/workflows/publish-utils.yml
@@ -1,10 +1,11 @@
-name: publish-utils
+name: Publish utils
+run-name: Publish ${{ github.ref_name }}
 on:
   push:
     tags:
       - utils-v**
 jobs:
-  publish-utils-package:
+  publish:
     uses: ./.github/workflows/publish-package.yml
     with:
       directory: packages/utils
