--- a/biome.json
+++ b/biome.json
@@ -1,10 +1,5 @@
 {
   "$schema": "https://biomejs.dev/schemas/1.7.3/schema.json",
-  "files": {
-    "ignore": [
-      "**/graphql.ts"
-    ]
-  },
   "organizeImports": {
     "enabled": true
   },
@@ -47,5 +42,20 @@
     "parser": {
       "unsafeParameterDecoratorsEnabled": true
     }
-  }
+  },
+  "overrides": [
+    {
+      "include": [
+        "vitest.config.mts",
+        "codegen*.ts"
+      ],
+      "linter": {
+        "rules": {
+          "style": {
+            "noDefaultExport": "off"
+          }
+        }
+      }
+    }
+  ]
 }
