--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -7,10 +7,10 @@
     "build:full": "cd ../core && pnpm build:full && cd ../demo && pnpm build",
     "build": "tsc",
     "dev": "tsc-watch --onSuccess 'node --enable-source-maps dist/main.js'",
-    "generate": "graphql-codegen --config codegen.graphql.yml",
+    "generate": "graphql-codegen --config codegen.graphql.ts",
     "lint": "biome check src",
     "start": "node --enable-source-maps dist/main.js",
-    "test": "c8 node --enable-source-maps --trace-warnings --test dist"
+    "test": "vitest run"
   },
   "engines": {
     "node": "^20.10"
