--- a/packages/react-utils/package.json
+++ b/packages/react-utils/package.json
@@ -9,9 +9,9 @@
     "build:full": "cd ../utils && pnpm build && cd ../react-utils && pnpm build",
     "build": "tsc",
     "lint": "biome check src",
-    "test": "c8 node --enable-source-maps --trace-warnings --test dist",
     "postversion": "bash ../../scripts/hooks/postversion.sh react-utils",
-    "preversion": "pnpm build"
+    "preversion": "pnpm build",
+    "test": "vitest run"
   },
   "engines": {
     "node": "^20.10"
