--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "outDir": "dist",
+    "experimentalDecorators": false,
+    "emitDecoratorMetadata": false
   }
 }
