Switch from tsyringe singletons to injectables

--- a/biome.json
+++ b/biome.json
@@ -56,6 +56,18 @@
           }
         }
       }
+    },
+    {
+      "include": [
+        "graphql*sdk.ts"
+      ],
+      "linter": {
+        "rules": {
+          "suspicious": {
+            "noExplicitAny": "off"
+          }
+        }
+      }
     }
   ]
 }
