--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -34,11 +34,13 @@
   "dependencies": {
     "@athenajs/core": "workspace:*",
     "@athenajs/utils": "workspace:*",
+    "graphql-request": "^6.1.0",
     "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/typescript": "^4.0.6",
+    "@graphql-codegen/typescript-graphql-request": "^6.2.0",
     "@graphql-codegen/typescript-operations": "^4.2.0"
   }
 }
